--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -31,6 +31,7 @@
 .right-nav {
     border: 2px red solid;
     width: 20%;
+    height: 70vh;
 }
 
 .inlagDiv {
@@ -58,4 +59,12 @@ h2 {font-size: 2em;}
 h3 {font-size: 2em;}
 h4 {font-size: 2em;
 text-align: center;}
-h5 {font-size: 2em;}
+h5 {font-size: 2em;
+    text-align: center}
+
+.img-box {
+    background-color: gray;
+    margin: auto;
+    width: 50%;
+    height: 20%;
+}
