--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -83,8 +83,11 @@ h5 {font-size: 2em;
 }
 
 
-.show-logIn {
-    visibility: hidden;
+.content-box{
+    display: none;
+}
+.content-box-active{
+    display: block;
 }
 
 .titleContainer {
