--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -40,11 +40,10 @@ section {
 }
 
 body {
-    background-color: #A3CDB5;
 }
 
 header {
-    border: black solid 3px;
+    border-bottom: solid #0000002e 2px;
     width: 1594px;
     height: 141px;
     margin: auto;
@@ -59,13 +58,13 @@ header {
 
 .sid-nav {
     width: 15%;
-    border: 3px solid black;
-    ;
+    /*border: 3px solid black;*/
+    background-color: aliceblue;
+    border-right: 2px solid #0000001f;
 }
 
 
 .post-div {
-    border: 3px solid black;
     width: 65%;
 }
 
@@ -77,10 +76,9 @@ header {
 
 .inlagDiv {
     /* text-align: center; */
-    background-color: #CADDD2;
+    background-color: #FAFAFA;
     width: 90%;
     margin: auto;
-    border: solid 3px black;
     max-height: 569px;
     overflow-y: scroll;
     margin-bottom: 40px;
@@ -102,10 +100,18 @@ body {
 
 h2 {
     font-size: 2em;
+    padding: 11px;
+    background-color: #A2CFFE;
+    color: white;
+    text-align: center;
 }
 
 h3 {
     font-size: 2em;
+    padding: 11px;
+    background-color: #A2CFFE;
+    color: white;
+    text-align: center;
 }
 
 h4 {
@@ -119,7 +125,6 @@ h5 {
 }
 
 .img-box {
-    background-color: #a3cdb5;
     margin: auto;
     width: 50%;
     height: 20%;
@@ -294,7 +299,10 @@ input[type="radio"][id^="cb"] {
 }
 
 .buttonHome button {
-    margin-top: 120px;
+    margin-top: 95px;
+    padding: 15px;
+    width: 110px;
+    border: none;
 }
 
 .img-box img {
@@ -307,4 +315,41 @@ textarea {
 
 #post-button {
     margin-bottom: 20px;
+}
+
+#signupButton {
+    background-color: #07B290;
+    color: white;
+}
+
+#forum-ul{
+  padding: 0;
+}
+
+#forum-ul button{
+    width: 233px;
+    padding: 12px;
+    background-color: #FAFAFA;
+    border: none;
+    margin: 3px;
+  }
+
+#users-ul {
+    padding: 0;
+}
+
+#users-ul button{
+    width: 233px;
+    padding: 12px;
+    background-color: #FAFAFA;
+    border: none;
+    margin: 3px;
+  }
+
+
+.buttonComment {
+    width: 735px;
+    background-color: #A2CFFE;
+    border: none;
+    color: white;
 }
