--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -60,7 +60,7 @@ header {
     width: 15%;
     /*border: 3px solid black;*/
     /*background-color: aliceblue;*/
-    border-right: 2px solid #0000001f;
+    /*border-right: 2px solid #0000001f;*/
 }
 
 
@@ -104,6 +104,9 @@ h2 {
     background-color: #A2CFFE;
     color: white;
     text-align: center;
+    font-family: "Montserrat Subrayada", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 h3 {
@@ -112,6 +115,9 @@ h3 {
     background-color: #A2CFFE;
     color: white;
     text-align: center;
+    font-family: "Montserrat Subrayada", sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 h4 {
@@ -355,9 +361,10 @@ textarea {
 }
 
 button:hover {
-    /*background-color: #FED1A2;*/
+    background-color: #333;
     color: white;
-    background-image: linear-gradient(to right, #333, #333);
+    /*background-image: linear-gradient(to right, #333, #333);*/
+    
 }
 
 #signupButton:hover {
@@ -367,3 +374,13 @@ button:hover {
     color: black;
 }
 
+
+#forum-ul button:hover {
+    background-color: #333;
+    color: white;
+}
+
+#users-ul button:hover {
+    background-color: #333;
+    color: white;
+}
