--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -128,6 +128,7 @@ h4 {
     font-style: normal;
 }
 
+
 h5 {
     font-size: 2em;
     text-align: center
@@ -153,6 +154,8 @@ h5 {
 
 
 #message {
+    /*width: 95%;
+    height: 80px;*/
     width: 95%;
     height: 80px;
 }
@@ -281,8 +284,11 @@ input[type="radio"][id^="cb"] {
 }
 
 #title {
-    width: 89.2%;
+    /*width: 89.2%;
+    margin-top: 20px;*/
+    width: 95%;
     margin-top: 20px;
+    margin-bottom: 18px;
 }
 
 .titleContainer img {
@@ -395,4 +401,9 @@ button:hover {
 #users-ul button:hover {
     background-color: #333;
     color: white;
+}
+
+
+form {
+    background-color: aliceblue;
 }
