--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -16,7 +16,7 @@ img {
 
 .allWrapper {
     display: flex;
-    
+
 }
 
 .allWrapper img {
@@ -40,8 +40,7 @@ section {
     gap: 1rem;
 }
 
-body {
-}
+body {}
 
 header {
     border-bottom: solid #0000002e 2px;
@@ -79,7 +78,7 @@ header {
 
 .inlagDiv {
     /* text-align: center; */
-    
+
     width: 90%;
     margin: auto;
     max-height: 569px;
@@ -139,8 +138,8 @@ h5 {
     font-size: 2em;
     font-style: normal;
     font-weight: 400;
-    
-    
+
+
 }
 
 .img-box {
@@ -231,10 +230,11 @@ h5 {
     background-color: #FAFAFA;
 }
 
-.comment-form textarea{
+.comment-form textarea {
     width: 99%;
 }
-.comment-form button{
+
+.comment-form button {
     margin: auto;
     display: block;
 }
@@ -368,11 +368,11 @@ textarea {
     color: white;
 }
 
-#forum-ul{
-  padding: 0;
+#forum-ul {
+    padding: 0;
 }
 
-#forum-ul button{
+#forum-ul button {
     background-color: #FAFAFA;
     border: none;
     width: 233px;
@@ -380,13 +380,13 @@ textarea {
     padding: 12px;
     /*box-shadow: 0 1px 1px #636363;*/
     box-shadow: 0 0px 1px #636363;
-  }
+}
 
 #users-ul {
     padding: 0;
 }
 
-#users-ul button{
+#users-ul button {
     /*width: 233px;
     padding: 12px;
     background-color: #FAFAFA;
@@ -398,7 +398,7 @@ textarea {
     margin: 3px;
     padding: 12px;
     box-shadow: 0 0px 1px #636363;
-  }
+}
 
 
 .buttonComment {
@@ -412,7 +412,7 @@ button:hover {
     background-color: #333;
     color: white;
     /*background-image: linear-gradient(to right, #333, #333);*/
-    
+
 }
 
 #signupButton:hover {
@@ -436,4 +436,8 @@ button:hover {
 
 form {
     background-color: aliceblue;
+}
+
+.logOutButton {
+    visibility: hidden;
 }
