Fixed modulles, fixed like, dislike button, fixed post

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -21,10 +21,14 @@ img {
 
 .allWrapper img {
     width: 18%;
+    height: 153px;
 }
 .allWrapper .like-button{
     width: 26px;
     height: 24px;
+}
+.allWrapper .dislike-button{
+    transform: scale(-1);
 }
 .postWrapper {
     width: 86%;
